Fixed bug #26456 (Wrong results from Reflection-API getDocComment() when called via STDIN)